# src/routes/blogsRoute.js
@@ -6,9 +6,9 @@ import blogsController from '../controllers/blogsController.js';
 const router = express.Router()
 
 // defined blogs route
-router.post('/blogs', verifyisAdmin, blogsController.createBlog )
+router.post('/blogs', blogsController.createBlog )
 router.get('/blogs', blogsController.getBlog)
-router.get('/blogs-get/:id', blogsController.getoneBlog)
+router.get('/blogs/get/:id', blogsController.getoneBlog)
 router.put('/blogs-update/:id',   blogsController.updateBlog)
 router.delete('/blogs-delete/:id',  blogsController.deleteBlog)
 
